--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -1,17 +1,12 @@
 name: Wakatime Readme
 
-# on:
-#   watch:
-#     types: started
-#   push:
-#     branches: [ master ]
-#   schedule:
-#     - cron: '* * * * *'
 on:
+  watch:
+    types: started
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ master ]
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   update-readme:
