--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches: [ master ]
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 * * * *'
 
 jobs:
   update-readme:
@@ -22,6 +22,6 @@ jobs:
           SHOW_COMMIT: "True"
           SHOW_DAYS_OF_WEEK: "True"
           SHOW_SHORT_INFO: "True"
-          SHOW_LOC_CHART: "False"
+          SHOW_LOC_CHART: "True"
           SHOW_PROJECTS: "False"
           SHOW_LANGUAGE_PER_REPO: "False"
